<resources>
    <string name="app_name">TempoTyping</string>
    <string name="regular">Regular</string>
    <string name="keyboard_smash">Keyboard Smash</string>
    <string name="play">Play</string>
    <string name="totype">toType</string>
    <string name="logo">logo</string>
    <string name="type_here">Type here</string>
    <string name="_0_00">0:00</string>
    <string name="back">back</string>
    <string name="play_logo">play_logo</string>
    <string name="choose_game_mode">CHOOSE GAME MODE</string>
    <string name="leaderboard">leaderboard</string>
    <string name="gm_regular">Regular</string>
    <string name="gm_scramble">Keyboard Smash</string>
    <string name="none">None</string>
    <string name="wpm_player">wpm - player</string>
    <string name="summary">Summary</string>
    <string name="your_score">YOUR SCORE:</string>
    <string name="_0_wpm">0 wpm</string>
    <string name="play_again">Play again</string>
    <string name="wait">Wait</string>
    <string name="your_placement_on_the_leaderboard">YOUR PLACEMENT ON THE LEADERBOARD:</string>
    <string name="_0">#0</string>
    <string name="get_ready">Get ready</string>
</resources>