<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#665BDCC2"
    tools:context=".Summary">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_0_wpm"
        android:textColor="#403F3F"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourScore"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/placement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_0"
        android:textColor="#403F3F"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yourPlacement"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/your_score"
        android:textColor="#403F3F"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <TextView
        android:id="@+id/yourPlacement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/your_placement_on_the_leaderboard"
        android:textColor="#403F3F"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        app:layout_constraintVertical_bias="0.451" />

    <Button
        android:id="@+id/play2"
        android:layout_width="305dp"
        android:layout_height="72dp"
        android:backgroundTint="#989898 "
        android:onClick="goPlay"
        android:text="@string/play_again"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

    <Button
        android:id="@+id/leaderboard2"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#989898 "
        android:onClick="goLeaderboards"
        android:text="@string/leaderboard"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/play2"
        app:layout_constraintEnd_toEndOf="@+id/play2"
        app:layout_constraintStart_toStartOf="@+id/play2" />
</androidx.constraintlayout.widget.ConstraintLayout>