<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#665BDCC2"
    tools:context=".Leaderboards">

    <ImageButton
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/back"
        android:onClick="goHomescreen2"
        android:tint="#989898"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/leaderboard_logo"
        android:layout_width="374dp"
        android:layout_height="63dp"
        android:contentDescription="@string/leaderboard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"
        app:srcCompat="@drawable/leaderboard_logo" />

    <TextView
        android:id="@+id/wpm_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wpm_player"
        app:layout_constraintBottom_toTopOf="@+id/scramble_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regular_scores"
        app:layout_constraintTop_toBottomOf="@+id/GM_scramble"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/regular_scores"
        android:layout_width="150dp"
        android:layout_height="400dp"
        android:background="#94FFFFFF"
        android:padding="10dp"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/scramble_scores"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_logo"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/wpm_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wpm_player"
        app:layout_constraintBottom_toTopOf="@+id/regular_scores"
        app:layout_constraintEnd_toStartOf="@+id/scramble_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GM_regular"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/scramble_scores"
        android:layout_width="150dp"
        android:layout_height="400dp"
        android:layout_marginEnd="32dp"
        android:background="#94FFFFFF"
        android:padding="10dp"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_logo"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/GM_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/gm_regular"
        android:textColor="#403F3F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/regular_scores"
        app:layout_constraintEnd_toStartOf="@+id/scramble_scores"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_logo"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/GM_scramble"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/gm_scramble"
        android:textColor="#403F3F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/scramble_scores"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regular_scores"
        app:layout_constraintTop_toBottomOf="@+id/leaderboard_logo"
        app:layout_constraintVertical_bias="0.455" />

</androidx.constraintlayout.widget.ConstraintLayout>